# WinCapture-MCP

./: Cargo.toml  README-SC.md  README.md
src/: app.rs  capture.rs  capture_flow.rs  capture_item.rs  capture_service.rs  cleanup.rs  d3d.rs  error.rs  frame.rs  frame_signal.rs  hwnd.rs  main.rs  model.rs  process.rs  server.rs  sonic_json.rs  texture_map.rs  tool_types.rs  window.rs  window_details.rs  window_query.rs
src/capture/: device.rs  frame.rs  resources.rs  service.rs
